<resources>
    <string name="app_name">Tour Guide</string>
    <string name="overview_text1">India is a huge beautiful land full of wonders country. From the Himalayas to the Indian Ocean, from Thar desert to the snowy mountains of Sikkim, it is a country full of beautiful sights and beautiful people. India is characterized by diverse culture, exceptional historical monuments, fancy festivals and lively people. Thus, it is no surprise that the country is considered a major hub for tourists all around the world. Widely agreed, this vast country is full of exciting and interesting places to visit and explore.</string>
    <string name="overview_text2"> There are 29 states and 7 union terrorties in India. Every state has its incredible beauty of heritage as well nation. Every state has its own religion story. In the field of literature and science India has produced emient person like Rabindranath Tagore, Premchand, Dr. AbdulKalam. India is a land of villages and fields laden with corps. Himalayas mountains has attracted many adventures to this land of rich culture.</string>
    <string name="overview_text3">Because of many beautiful locations is the craze of tourists. The Taj Mahal, Lotus Temple, The Red Fort are few for the many wonders which attracts human curiosity. In Jammu and Kashmir, kashmir has been described as a paradise on earth. There are 22 languages constitutionally enjoy the status of official language but Hindi is the Mother tongue of India. Besides the major tourist attractions, Indian cities also provide a feeling of immense joy. Every city has a different culture, kinds of people and thus, the experience varies from place to place.</string>
    <string name="overview_text4"> India is fulfil country with nature, adventure and many more you must visit India just to explore the experience of greatness. Indians are known for their greeting to their guest, Atithi devo bhava meaning "Guest is God". India\'\s culture and heritage are a rich amalgam of the past and the present. This vast country offers the visitor a view of fascinting religions and enthnography, a vast variety of languages with more than 438 living languages, and monuments that have been present for thousand of years. Mountains, jungles, deserts, beaches all you want to Travel India is have.</string>
    <string name="tab_text_1">OVER VIEW</string>
    <string name="tab_text_2">STATES</string>
    <string name="tab_text_3">Delhi Guide</string>
    <string name="delhi_tab_1">Monuments</string>
    <string name="delhi_tab_2">Religious Places</string>
    <string name="delhi_tab_3">Hotels</string>
    <string name="delhi_tab_4">Hospitals</string>
    <string name="delhi_tab_5">Malls</string>
    <string name="delhi_tab_6">Cabs</string>
    <string name="delhi_tab_7">Contacts</string>
    <string name="delhi_tab_8">Booking</string>
    <string name="state_tab_1">Over View</string>
    <string name="state_tab_2">Visiting Time</string>
    <string name="state_tab_3">Contact</string>
    <string name="state_tab_4">NearBy Hotels</string>
    <string name="delhi_layout"><center>Delhi is a city that has been <center>repeatedly ravaged and </center>reborn, with vestiges of lost empires in almost every neighbourhood. There\'\s so much to experience here, it\'\s like a country in itself.</center></string>
    <string name="title_activity_delhi_details">DelhiDetails</string>
    <string name="title_activity_state_info">StateInfo</string>
    <string name="andhra_pradesh_overview">The Charminar which was built by Muhammad Quli Qutb Shahi in 1591 CE, is a monument and mosque located in Hyderabad, Telangana, India.
    This landmark monument has become a global icon of Hyderabad, and is listed among the most recognized structures of India. It is the most famous building of Hyderabad aand also one of the most famous buildings in India.
    It is believed that Muhammad Quli Qutb Shahi constructed it to celebrate the end of a deadly plague. The Charminaries near the bank of the river Musi and it is very close to Laad Bazaar and Makkah Masjid. The word Charminar is taken from two words \'\Char\'\ and \'\Minar\'\ which translate as Four Towers.
    \n \n Charminar was the first structure to be constructed in the newly built city of hyderabad. |It is said that Quli Qutb Shahi prayed for the end of the plagueand vowed to build a mosque if it was eradicated.
    Mir Momin Astrabadi,the prime minister of Qutb Shah played an important role in the design and layout of Charminar and the city of Hyderabad. The structure is of Indo-Islmaic architecture with some Persian elements. The city of Hyderabad was divided into four divisions equally around the Charminar.</string>
    <string name="andhra_pradesh_tv_2">All days of the week. \n \n 9:00 AM - 5:30 PM</string>
    <string name="andhra_pradesh_tv_3">Charminar, \n \n Hyderabad, \n \n Telangana. \n\n Phone: 040 6674 5986</string>
    <string name="arunachal_pradesh_overview">Itanagar is the capital of Arunachal pradesh. Itanagar is situated at the foothills of Himalayas. The township is situated at an alititude of 350 m above sea level. It comes administratively under Papum Pare District.
    \n \n Itanagar is well connected by road. There is a helicopter service between Guwahati and Naharlagun(Itanagar). Apart from the state administrative headquarters, the city presents a number of rich architectural wonders. The historical Ita Fort is made of scoio-cultural point. For a simple holidaymaker to an archeologist, this place can be of great value to be explored. The legendary Ganga Lake (Gyakar Sinwi) is a famous picnic spot in Itanagar which is 6 km from the heart of the city.
    Jawaharlal Nehru Museum is a wonderful repository of indigenous tribal culture of Arunachal. Gompa Buddha Vihar is an astounding yellow roofed shrine. One can have a glimpse of the surrounding countryside from the gompa premise. Buy some local artifacts, wall paintings, herbal dyed yarns and bamboo/cane-made attractive utility items from Craft Centre and Emporioum. Polo Park, Indira Gandhi Park, and Zoological Park are some of the evening leisure walk spots.</string>
    <string name="arunachal_pradesh_tv_2">The best time to visit Itanagar is between October and March, much like most places in Arunachal Pradesh. These months experience a cool breeze blowing in from the Himalayan foothills which temper the heat and humidity.
    \n\n The avoidable months to travel to itanagar are again the treacherous monsoon between July and September. The winters remain cool.</string>
    <string name="arunachal_pradesh_tv_3">Director Department of Tourism Govt. of Arunachal Pradesh Itanagar, \n\n Arunachal Pradesh \n\n India \n\n Phone: +91 360 221 4745</string>
    <string name="assam_overview">Kaziranga National park, is a national park in the Golaghat and Nagaon districts of the state of Assam,India. The park 430 square kilometer area sprinkled with elephant grass meadows, swampy lagoons, and dense forests is home to more than 2200 Indian one-horned rhinoceros, approximately 2/3rd of their total world population.
    Formed in 1908 on the recommedation of Mary Curzon, the park is located in the edge of the Eastern Himalayan biodiversity hotspots - Golaghat and Nagaon district. In the year 1985, the park was declared as a world Heriatge Site by UNESCO.
    \n\n According to the census held in March 2015, which was jointly conducted by the Forest Department of the government of Assam and some recognized wildlife NGOs, the rhino population in Kaziranga National park is 2401. Kaziranga is home to the highest density of tigers among protected areas in the world, and was declared a Tiger Reserve in 2006. The park is home to large breeding populations of elephants, wild water buffalo, and swamp deer.
    Kaziranga is recognized as an important bird area by bird life international for conservation of avifaunal species. When compared with other protected areas in India, Kaziranga has achieved notable success in wildlife conservation. Located on the edge of the Eastern Himalaya biodiversity hotspot, the park combines high species diversity and visibility.</string>
    <string name="assam_tv_2">Best Time to visit \n\n November to April is the best time to visit Kaziranga Park. \n\n Summer(March-April) : During the time of the year, the climate remains dry and windy, one can find animals around the water bodies. \n\n Monsoon(May- October) : From May till October, the region receives heavy rain,approximately 2220 mm. \n The park remains closed from May to October due to warnings of Brahmaputra river floods.</string>
    <string name="assam_tv_3">Director Department of Tourism Govt. of Assam, \n\n Assam \n\n India \n\n Phone: +03776 268 095</string>
    <string name="home">Home</string>
    <string name="about_us">About Developer</string>
    <string name="about_text">  TraWiNoRe is the one stop \n destination to guide and \n about all places.
        \n\n A WOW experience with the \n largest collection of Delhi \n Hotels, Monuments , Religious Places and Hospitals.
        \n\n<b>Developer : Anshul Gupta \n\nCompany Name : CodeXonic \n \nVersion : 2.0 \n\n App Name : TraWiNoRe </b> </string>
    <string name="feedback">Feedback</string>
    <string name="exit">Exit</string>
    <string name="about_header">About Dev.</string>
    <string name="know_more">Click Here to know more about this.</string>
    <string name="map_click">Click Here for DIRECTIONS.</string>
    <string name="vtime">VISITING TIME</string>
    <string name="contact">CONTACT</string>
    <string name="login_header">TraWiNoRe</string>
    <string name="login_Subheader">Travel With No Regrets</string>
    <string name="button_login">Let\'\s Explore the World</string>
    <string name="login_username">UserName</string>
    <string name="login_password">Password</string>
    <string name="spalsh_loading">loading...</string>
    <string name="delhi_button">Let\'\s Explore Delhi</string>
    <string name="search_bar">Enter state name</string>
    <string name="link_click">Click on image for Online Booking.</string>
    <string name="stateDetails_passValue">state</string>
    <string name="MainAcitivity_title">TraWiNoRe</string>
    <string name="MainAcitivity_mailto">mailto: ag1407anshul@gmail.com</string>
    <string name="MainAcitivity_subject">Feedback for TraWiNoRe</string>
    <string name="login_screen_username">Please enter a Username</string>
    <string name="login_screen_password">Please enter a Password</string>
    <string name="login_screen_password_length">Please enter more than 6 digit Password</string>
    <string name="login_screen_NotificationTitle">Welcome to TraWiNoRe</string>
    <string name="login_screen_NotificationText">Let\'\s Explore the World!!</string>
    <string name="FragState_ArrayList_item1">Andhra Pradesh</string>
    <string name="FragState_ArrayList_item2">Arunachal Pradesh</string>
    <string name="FragState_ArrayList_item3">Assam</string>
    <string name="FragState_ArrayList_item4">Bihar</string>
    <string name="FragState_ArrayList_item5">Chhattishgarh</string>
    <string name="FragState_ArrayList_item6">Delhi</string>
    <string name="FragState_ArrayList_item7">Goa</string>
    <string name="FragState_ArrayList_item8">Gujarat</string>
    <string name="FragState_ArrayList_item9">Haryana</string>
    <string name="FragState_ArrayList_item10">Himachal Pradesh</string>
    <string name="FragState_ArrayList_item11">Jammu and Kashmir</string>
    <string name="FragState_ArrayList_item12">Jharkhand</string>
    <string name="FragState_ArrayList_item13">Karnatka</string>
    <string name="FragState_ArrayList_item14">Kerala</string>
    <string name="FragState_ArrayList_item15">Madhya Pradesh</string>
    <string name="FragState_ArrayList_item16">Maharashtra</string>
    <string name="FragState_ArrayList_item17">Manipur</string>
    <string name="FragState_ArrayList_item18">Meghalaya</string>
</resources>