<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:fitsSystemWindows="true"
    tools:context=".DelhiDetails">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/delhitab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delhi_tab_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/delhitab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delhi_tab_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/delhitab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delhi_tab_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/delhitab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delhi_tab_4" />

            <android.support.design.widget.TabItem
                android:id="@+id/delhitab5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delhi_tab_5" />

            <android.support.design.widget.TabItem
                android:id="@+id/delhitab6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delhi_tab_6" />

            <android.support.design.widget.TabItem
                android:id="@+id/delhitab7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delhi_tab_7" />

            <android.support.design.widget.TabItem
                android:id="@+id/delhitab8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delhi_tab_8" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>